[package]
name = "nature_gas_engineering_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["default"] }
tower-http = { version = "0.6.6", features = ["fs"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "mysql",
    "macros",
    "chrono",
    "bigdecimal",
    # DATE / DATETIME / TIMESTAMP
    "uuid", # 若表含 BINARY(16) → UUID
] }
tokio = { version = "1.48.0", features = ["full"] }
dotenv = "0.15"
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.3"
tracing = "0.1.41"
rayon = "1.8"
num_cpus = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
